Added some features in UI

--- a/Graphs.UI/Graphs.UI.csproj
+++ b/Graphs.UI/Graphs.UI.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ConsoleTools\ConsoleTools.csproj" />
+      <ProjectReference Include="..\Graphs.Structure\Graphs.Structure.csproj" />
+    </ItemGroup>
+
 </Project>
